--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,9 @@
 .container {
   display: flex;
   position: sticky;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   top: 0;
+  overflow: hidden;
   align-items: center;
   justify-content: center;
   min-height: 100svh;
@@ -24,7 +26,7 @@
   left: 0;
   top: 0;
   background-color: rgba(240, 248, 255, 0.459);
-  padding: 1rem 2rem;
+  padding: 1rem 1.5rem;
 }
 
 
